...
        )
        TextField(
            value = shout,
            onValueChange = onShoutChange,
            modifier = Modifier
                .height(150.dp)
                .semantics { contentDescription = "TextField for shout" },
            placeholder = { Text(stringResource(R.string.main_shout_placeholder)) },
        )
        Row(
            verticalAlignment = Alignment.CenterVertically,
        ) {
            Button(
                onClick = onCheckinButtonClicked,
                enabled = locationState is MainContract.LocationState.Loaded &&
                    checkinState !is MainContract.CheckinState.Loading &&
                    selectedVenueId != "",
                modifier = Modifier
                    .semantics { contentDescription = "Create a Checkin" },
            ) {
                Text(stringResource(R.string.main_button_checkin))
            }
        }
        Row(
            horizontalArrangement = Arrangement.spacedBy(8.dp),
...
    }
}

private val previewVenue =
    MainContract.Venue(
        id = "id",
        name = "test venue",
        categoriesString = "test category, test category 2",
        distance = 12,
        icon = MainContract.Venue.Icon(
            name = "test category",
            url = "https://example.com/foo.png",
        ),
...
